# sdl_template

./: .gitignore  1_create_window.c  2_manage_events.c  3_drawing_rects.c  4_pong.c  CMakeLists.txt  README.md
